Create register endpoint
