# api/swagger.yml
@@ -13,6 +13,8 @@ tags:
     description : "Check the service"
   - name: "Store"
     description: "Every request and response about Store"
+  - name: "User"
+    description: "Every request and response about User"
 
 paths:
   /health:
@@ -34,7 +36,6 @@ paths:
                 description: "Success retrieve data"
                 example: "App running well"
               data:
-                type: object
                 $ref: "#/definitions/Health"
         default:
           $ref: "#/responses/ErrorUnexpected"
@@ -178,6 +179,62 @@ paths:
         default:
           $ref: "#/responses/ErrorUnexpected"
 
+  /register:
+    post:
+      summary: "Create new account"
+      description: "Register new account for this app"
+      tags:
+        - "User"
+      produces:
+        - "application/json"
+      parameters:
+        - in: body
+          name: body
+          description: "Body for create new account request"
+          required: true
+          schema:
+            $ref: "#/definitions/RegisterRequest"
+      responses:
+        "201":
+          description: "Success"
+          schema:
+            type: object
+            properties:
+              message:
+                type: "string"
+                description: "Success create new account"
+                example: "Succeess"
+        default:
+          $ref: "#/responses/ErrorUnexpected"
+          
+  /login:
+    post:
+      summary: "Login to app"
+      description: "Login with an existing account"
+      tags:
+        - "User"
+      produces:
+        - "application/json"
+      parameters:
+        - in: body
+          name: body
+          description: "Body for login with an existing account"
+          required: true
+          schema:
+            $ref: "#/definitions/LoginRequest"
+      responses:
+        "200":
+          description: "Success"
+          schema:
+            type: object
+            properties:
+              message:
+                type: "string"
+                description: "Login successfully"
+                example: "Login successfully"
+        default:
+          $ref: "#/responses/ErrorUnexpected"
+
 definitions:    
 
 #### REQUEST ####
@@ -192,25 +249,62 @@ definitions:
       store_name:
         type: "string"
         example: "warung dummy"
-        x-go-custom-tag: gorm:"type:varchar(255)"
       owner:
         type: "string"
         example: "owner dummy"
-        x-go-custom-tag: gorm:"type:varchar(255)"
       store_phone:
         type: "string"
         example: "+6288220138765"
         pattern: '\+62\d*'
         maxLength: 15
-        x-go-custom-tag: gorm:"type:varchar(15)"
       store_photo:
         type: "string"
         example: "sp1.jpg"
-        x-go-custom-tag: gorm:"type:varchar(255);default:sp0.jpg"
       store_address:
         type: "string"
         example: "Banjaran, Kabupaten Bandung"
-        x-go-custom-tag: gorm:"type:varchar(255)"
+        
+  RegisterRequest:
+    type: "object"
+    required:
+      - first_name
+      - username
+      - email
+      - password
+    properties:
+      unique_id:
+        type: "string"
+      first_name:
+        type: "string"
+        minLength: 3
+      last_name:
+        type: "string"
+        minLength: 3
+      full_name:
+        type: "string"
+      username:
+        type: "string"
+        example: "Hulhay169"
+        minLength: 5
+      email:
+        type: "string"
+        format: "email"
+        example: "hulhay@gmail.com"
+      password:
+        type: "string"
+        minLength: 6
+        
+  LoginRequest:
+    type: "object"
+    required:
+      - username
+      - password
+    properties:
+      username:
+        type: "string"
+      password:
+        type: "string"
+        minLength: 6
 
 #### Response ####
 
@@ -241,6 +335,42 @@ definitions:
         type: "string"
         x-go-custom-tag: gorm:"type:varchar(255);default:sp0.jpg"
       store_address:
+        type: "string"
+        x-go-custom-tag: gorm:"type:varchar(255)"
+      created_at:
+        type: "string"
+        format: "date-time"
+        x-go-custom-tag: gorm:"type:timestamp;autoCreateTime"
+      updated_at:
+        type: "string"
+        format: "date-time"
+        x-go-custom-tag: gorm:"type:timestamp;autoUpdateTime"
+        
+  Users:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+        x-go-custom-tag: gorm:"type:int primary key auto_increment"
+      unique_id:
+        type: "string"
+        x-go-custom-tag: gorm:"type:varchar(255)"
+      full_name:
+        type: "string"
+        x-go-custom-tag: gorm:"type:varchar(255)"
+      user_photo:
+        type: "string"
+        x-go-custom-tag: gorm:"type:varchar(255);default:up0.jpg"
+      email:
+        type: "string"
+        format: "email"
+        x-go-name: "email"
+        x-go-custom-tag: gorm:"type:varchar(255)"
+      username:
+        type: "string"
+        x-go-custom-tag: gorm:"type:varchar(255)"
+      password:
         type: "string"
         x-go-custom-tag: gorm:"type:varchar(255)"
       created_at:
